# embedded-mastery-kit

./: .clang-format  .gitignore  CMakeLists.txt  README.md
02-math-bitwise-operations/: CMakeLists.txt
02-math-bitwise-operations/optimized/: swap_values.c
03-algorithms-data-structures/: CMakeLists.txt  stack.c
04-design-patterns/: CMakeLists.txt
04-design-patterns/fsm/: fsm.c  fsm.h  test_fsm.c
